home page draft layout done

--- a/index.html
+++ b/index.html
@@ -8,13 +8,39 @@
     <title>Seashell</title>
 
     <link rel="stylesheet" href="main.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
+    
     <!-- <link rel="icon" href="./favicon.ico" type="image/x-icon"> -->
+
   </head>
 
 
   <body>
+    <nav>
+
+      <div class="nav-logo">
+        <a href="/">Seashell</a>
+      </div>
+
+      <div class="nav-links">
+        <a href="/">Instructors</a>
+        <a href="/">Studios</a>
+        <a href="/">Workshops</a>
+        <a href="/">How it works</a>
+        <a href="/">FAQ</a>
+      </div>
+
+    </nav>
+
+    
     <main>
-        <h1>Welcome to My Website</h1>  
+        <h1>We make mindful movement friendly and accessible.</h1>
+        <button id="book-btn">Book a class for your team in seconds</button>
+        <h2>Our approach to corporate wellbeing is as unique as your business.</h2>
     </main>
 
 
