--- a/index.html
+++ b/index.html
@@ -1,52 +1,34 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html lang="en" data-theme="aqua">
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-
-    <title>Seashell</title>
-
-    <link rel="stylesheet" href="main.css">
-
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
-
-    <!-- <link rel="icon" href="./favicon.ico" type="image/x-icon"> -->
-
-  </head>
-
-
-  <body>
-    <nav>
-
-      <div class="nav-logo">
-        <a href="/">Seashell</a>
-      </div>
-
-      <div class="nav-links">
-        <a href="/">Instructors</a>
-        <a href="/">Studios</a>
-        <a href="/">Workshops</a>
-        <a href="/">How it works</a>
-        <a href="/">FAQ</a>
-      </div>
-
-    </nav>
-
     
-    <main>
-        <h1 class="hero-text">We make mindful movement friendly and accessible.</h1>
-        <button id="book-btn">Book a class for your team in seconds</button>
-        <h2 id="approach">Our approach to corporate wellbeing is as unique as your business.</h2>
-    </main>
-
-
-
-
-
-
+    <meta charset="UTF-8" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Seashell" />
+    <meta property="og:url" content="" />
+    <meta
+      property="og:image"
+      content=""
+    />
+    <meta
+      property="og:description"
+      content=""
+    />
+    <link rel="icon" href="" />
+    <link rel="apple-touch-icon" href="" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/main.css" />
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
+    integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
+    crossorigin="anonymous"
+    referrerpolicy="no-referrer"
+  />
+    <title>Seashell</title>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
