--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" data-theme="aqua">
+<html lang="en" data-theme="custom">
   <head>
     
     <meta charset="UTF-8" />
