--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
       content=""
     />
     <link rel="icon" href="" />
-    <link rel="apple-touch-icon" href="" />
+    <link rel="icon" href="./src/assets/logo.png" />
+    <link rel="apple-touch-icon" href="./src/assets/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/main.css" />
     <link
